--- a/Quiz-KBC/Quiz-KBC/View/Base.lproj/Main.storyboard
+++ b/Quiz-KBC/Quiz-KBC/View/Base.lproj/Main.storyboard
@@ -29,6 +29,16 @@
                                         <color key="textColor" red="0.24539974614619275" green="0.16450700523112718" blue="0.037117269174987935" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j6k-e1-Rl9">
+                                        <rect key="frame" x="187" y="369" width="39" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Reset">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="0.4981271404109589" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="restartQuestions:" destination="BYZ-38-t0r" eventType="touchUpInside" id="a14-PC-TpQ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
